--- a/src/main/resources/webroot/cv.css
+++ b/src/main/resources/webroot/cv.css
@@ -77,3 +77,27 @@ width:100%;
 .glyphicon-trash{
     color:#ff0041;
 }
+
+.searchclear {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    bottom: 0;
+    height: 14px;
+    margin: auto;
+    font-size: 14px;
+    cursor: pointer;
+    color: #ccc;
+}
+
+.searchtool {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    bottom: 0;
+    height: 14px;
+    margin: auto;
+    font-size: 14px;
+    cursor: pointer;
+    color: #ccc;
+}
